# TradingBot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_LINUX_DEPLOY.md  README_STRATEGY_START_TIMES.md  macro_events.example.yaml  main.py  pyproject.toml  requirements.txt  start_trading_bot.bat  start_trading_bot.sh
configs/: README_PRESETS.md  config.closing_reversal.yaml  config.example.yaml  config.mean_reversion.yaml  config.momentum_close.yaml  config.opening_range_breakout.yaml  config.pairs_residual.yaml  config.peer_confirmed_htf_pivots.yaml  config.peer_confirmed_key_levels.yaml  config.peer_confirmed_key_levels_1m.yaml  config.peer_confirmed_trend_continuation.yaml  config.rth_trend_pullback.yaml  config.top_tier_adaptive.yaml  config.volatility_squeeze_breakout.yaml  config.zero_dte_etf_long_options.yaml  config.zero_dte_etf_options.yaml
intraday_tv_schwab_bot/: __init__.py  _sr_ladder.py  audit_logger.py  broker_positions.py  candles.py  chart_patterns.py  config.py  cycle_gate.py  dashboard.py  dashboard_cache.py  data_feed.py  engine.py  entry_gatekeeper.py  execution.py  htf_levels.py  levels_shared.py  models.py  options_mode.py  order_blocks.py  paper_account.py  position_manager.py  position_metrics.py  position_store.py  risk.py  screener_client.py  session_report.py  startup_reconciler.py  support_resistance.py  technical_levels.py  utils.py  warmup_tracker.py
intraday_tv_schwab_bot/_strategies/: README.md  __init__.py  (+7 more)
scripts/: scaffold_strategy_plugin.py  sync_macro_events.py
theme_previews/: preview.html
(+75 files in other folders)
